--- a/app/views/csi/survey_results/list.html.erb
+++ b/app/views/csi/survey_results/list.html.erb
@@ -1,38 +1,22 @@
 <%= common_title(:show_data=>"",:action_meaning=>t(:label_csi_survey_result_list)) %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_csi_survey_response_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:export),{:action => "export", :id => @survey.id,:format=>:xls},:id=>"exportSurvey",:class=>"submit",:target=>"_blank"%></div>
-                <div class="button"><%= link_back t(:back)%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="advisory_boardsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="responses" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:label_csi_survey_result_show_response),{:action=>"show_response",:id=>"{id}"},{:back=>true}) %>
-          </div>
-        </div>
-        <%= datatable("responses",{:action=>"get_data",:id=>@survey.id,:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       {:key=>"person_name",:label=>t(:label_csi_survey_response_person),:searchable=>true,:width=>"180px"},
-                       {:key=>"start_at",:label=>t(:label_csi_survey_response_start_at),:width=>"180px"},
-                       {:key=>"elapse",:label=>t(:label_csi_survey_response_elapse),:width=>"70px"},
-                       {:key=>"ip_address",:label=>t(:label_csi_survey_response_ip_address)}],
-                      {:force_html=>true,:paginator_box=>"responsesPaginatorBox",:search_box=>"responsesSearchBox"})%>
-        <div id="responsesPaginatorBox"></div>
-      </div>
-    </div>
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_csi_survey_response_list) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:export),{:action => "export", :id => @survey.id,:format=>:xls},:id=>"exportSurvey",:class=>"btn btn-primary",:target=>"_blank"%>
+        <%= link_back t(:back),{},:class => "btn cancel"%>
+      </td>
+      <td class="page-block-help">
+        <div id="searchBox"></div>
+      </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="responses"></div>
+    <%= datatable("responses",{:action=>"get_data",:id=>@survey.id,:format=>"json"},[],{:paginator_box=>"paginator",:search_box=>"searchBox"})%>
+    <div id="paginator"></div>
+  </div>
 </div>
-
 
