--- a/app/views/csi/survey_results/show_input.html.erb
+++ b/app/views/csi/survey_results/show_input.html.erb
@@ -1,80 +1,23 @@
 <%= common_title(:show_data=>@survey_subject.survey.title,:action_meaning=>t(:label_csi_survey_result_show_input)) %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= @survey_subject.name %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_back t(:back)%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="advisory_boardsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-
-         <%= detail_data_table(@text_inputs.length) do %>
-           <!--  irm datatable      -->
-           <div class="irm-datatable">
-             <div>
-                 <table>
-                   <thead>
-                     <tr>
-                       <th>
-                         <div><%= t(:label_csi_survey_response_person) %></div>
-                       </th>
-                       <th>
-                         <div><%= t(:label_csi_survey_response_start_at) %></div>
-                       </th>
-                       <th>
-                         <div><%= t(:label_csi_survey_response_text_input) %></div>
-                       </th>
-                       <th style="width:80px">
-                         <div><%= t(:operation) %></div>
-                       </th>
-                     </tr>
-                   </thead>
-                   <tbody>
-                     <%@text_inputs.each do |data|  %>
-                         <tr id="<%=data[:id]%>">
-
-                           <td>
-                             <div>
-                               <%= data[:person_name] %>
-                             </div>
-                           </td>
-                           <td>
-                             <div>
-                               <%= format_date(data[:start_at]) %>
-                             </div>
-                           </td>
-                           <td>
-                             <div>
-                               <%= data[:text_input] %>
-                             </div>
-                           </td>
-                           <td>
-                             <div>
-                               <%= link_to t(:label_csi_survey_result_show_response),{:controller => "csi/survey_results",:id=>data.survey_response_id,:action => "show_response"} ,{:back=>true } %>
-                             </div>
-                           </td>
-                         </tr>
-                     <% end %>
-                   </tbody>
-                 </table>
-             </div>
-           </div>
-           <!--  end irm datatable      -->
-         <% end %>
-
-
-      </div>
-    </div>
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= @survey_subject.name %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_back t(:back), {}, :class => "btn cancel"%>
+      </td>
+      <td class="page-block-help"></td>
+  </tr></table>
+  <div class="page-block-body">
+    <%=datatable_view({:count=>@text_inputs.length,:datas=>@text_inputs}) do |builder|%>
+      <% builder.column(:survey_response_id,{:title=>t(:operation),:width=>"80"}) do |data| %>
+        <%= link_to t(:label_csi_survey_result_show_response),{:controller => "csi/survey_results",:id=>data[:survey_response_id],:action => "show_response"} ,{:back=>true } %>
+      <% end %>
+      <% builder.column(:person_name,{:title=>t(:label_csi_survey_response_person)})%>
+      <% builder.column(:start_at,{:title=>t(:label_csi_survey_response_start_at)}) %>
+      <% builder.column(:text_input,{:title=>t(:label_csi_survey_response_text_input)}) %>
+    <% end %>
+  </div>
 </div>
-
-
