--- a/app/views/csi/survey_results/show_response.html.erb
+++ b/app/views/csi/survey_results/show_response.html.erb
@@ -5,78 +5,53 @@
 <% subject_pages = paginate_survey_subjects(@survey_response.survey_id); subjects = subject_pages.flatten%>
 
 <style type="text/css">
-  td.surveydataCol{
+  td.surveydata-col{
     padding-left:15px;
   }
 </style>
-
-<div id="ep" class="detail-block page-block">
-    <div >
-        <div class="pbHeader">
-          <table cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-              <tr>
-                <td class="pbTitle">
-                  <h2 class="mainTitle"><%=@survey_response.survey.title%></h2>
-
-                </td>
-                <td id="topButtonRow" class="pbButton">
-                  <div class="button"><%= link_back t(:back)%></div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-
-        <div id="pages" count="<%= subject_pages.length %>">
-            <%subject_pages.each_with_index do |survey_subjects,page|%>
-                <div id="page_<%=page+1 %>">
-                    <% survey_subjects.each do  |subject|%>
-                        <div class="pbBody lightBlueBorder noLineShow" id="subject_<%=subject.id  %>">
-                          <div class="pbSubheader tertiaryPalette" id="subjectHeader_<%=subject.id  %>">
-                              <h3><%=subject.number%>.&nbsp;<%=subject.name%>&nbsp;&nbsp;</h3>
-                              <% if (Irm::Constant::SYS_YES.eql?(subject.required_flag)) %>
-                                 <span class="required_answer">[<%=types[subject.input_type.to_sym]%>,<%= t(:label_csi_survey_required_input)%>]</span>
-                              <% else %>
-                                 <span class="titleSeparatingColon">[<%=types[subject.input_type.to_sym]%>]</span>
-                              <% end %>
-                          </div>
-
-                          <div class="pbSubsection">
-                            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                              <tbody>
-                                  <% (datas[subject.id]||[]).each do |option| %>
-                                    <tr>
-                                    <% if "OPTION".eql?(option.result_type) %>
-                                      <td class="surveydataCol"><div><%= option[:option_value] %></div></td>
-                                    <% elsif "INPUT".eql?(option.result_type)  %>
-                                      <td class="surveydataCol"><div><%= option[:text_input] %></div></td>
-                                    <% elsif "OTHER".eql?(option.result_type)  %>
-                                      <td class="surveydataCol"><div><%= t(:label_csi_survey_subjects_other) %>:<%= option[:text_input] %></div></td>
-                                    <% end %>
-                                    </tr>
-                                  <% end %>
-                              </tbody>
-                            </table>
-                          </div>
-                        </div>
-                    <% end %>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=@survey_response.survey.title%></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_back t(:back), {},:class => "btn cancel"%>
+    </td>
+  </tr>
+  </table>
+  <div class="page-block-body"  id="pages" count="<%= subject_pages.length %>">
+    <%subject_pages.each_with_index do |survey_subjects,page|%>
+        <div id="page_<%=page+1 %>" style="padding: 5px 20px;">
+            <% survey_subjects.each do  |subject|%>
+                <div  id="subject_<%=subject.id  %>">
+                  <div id="subjectHeader_<%=subject.id  %>">
+                      <h3><%=subject.number%>.&nbsp;<%=subject.name%>&nbsp;&nbsp;</h3>
+                      <% if (Irm::Constant::SYS_YES.eql?(subject.required_flag)) %>
+                         <span class="required_answer">[<%=types[subject.input_type.to_sym]%>,<%= t(:label_csi_survey_required_input)%>]</span>
+                      <% else %>
+                         <span class="titleSeparatingColon">[<%=types[subject.input_type.to_sym]%>]</span>
+                      <% end %>
+                  </div>
+                  <table class="show-table">
+                    <tbody>
+                        <% (datas[subject.id]||[]).each do |option| %>
+                          <tr>
+                          <% if "OPTION".eql?(option.result_type) %>
+                            <td class="surveydata-col"><div><%= option[:option_value] %></div></td>
+                          <% elsif "INPUT".eql?(option.result_type)  %>
+                            <td class="surveydata-col"><div><%= option[:text_input] %></div></td>
+                          <% elsif "OTHER".eql?(option.result_type)  %>
+                            <td class="surveydata-col"><div><%= t(:label_csi_survey_subjects_other) %>:<%= option[:text_input] %></div></td>
+                          <% end %>
+                          </tr>
+                        <% end %>
+                    </tbody>
+                  </table>
                 </div>
             <% end %>
         </div>
+    <% end %>
 
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
+  </div>
 </div>
-
-
