--- a/app/views/csi/survey_subjects/_check_form.html.erb
+++ b/app/views/csi/survey_subjects/_check_form.html.erb
@@ -4,9 +4,7 @@
                :locals => {:value => option.value, :parent => parent, :subject => subject} %>
   <% end if subject %>
   <% if subject.nil? || subject.subject_options.size == 0 %>
-    <%= render :partial => '/csi/shared/check_option',
-               :locals => {:value => t(:label_csi_survey_subjects_option_one),
-                           :parent => parent, :subject => subject} %>
+    <%= render :partial => '/csi/shared/check_option',:locals => {:value => t(:label_csi_survey_subjects_option_one), :parent => parent, :subject => subject} %>
   <% end %>
 </div>
 <p>
