--- a/app/views/csi/survey_subjects/_new_form.html.erb
+++ b/app/views/csi/survey_subjects/_new_form.html.erb
@@ -1,64 +1,51 @@
 <%= common_title%>
 <% require_javascript(:survey) %>
-<div id="new_form">
-<%= form_for(@survey_subject,:url=>{:controller=>"csi/survey_subjects",:action=>"create",:survey_id=>@survey_subject.survey_id},:builder => LabellingFormBuilder) do |f| %>
-    <%= f.hidden_field :survey_id %>
-    <div id="ep" class="edit-block page-block">
-     <div class="pbHeader">
-       <table cellpadding="0" cellspacing="0" border="0">
-         <tbody>
-           <tr>
-             <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_csi_survey_subject_new)%></h2></td>
-             <td id="topButtonRow" class="pbButton">
-                 <div class="button"><%= link_submit t(:save)%></div>
-                 <div class="button"><%= link_to t(:save_and_new), {:controller=>"csi/survey_subjects",:action=>"create",:survey_id=>@survey_subject.survey_id,:save_and_new=>true},{:class=>"submit"} %></div>
-                 <div class="button"><%= link_to t(:cancel), {:controller=>"csi/surveys",:action => "show",:id=>@survey_subject.survey_id}%></div>
+<%= form_for(@survey_subject,:url=>{:controller=>"csi/survey_subjects",:action=>"create",:survey_id=>@survey_subject.survey_id},:builder => CustomFormBuilder) do |f| %>
+  <%= f.hidden_field :survey_id %>
+  <% content_for :form_block_common  do %>
+    <%= render :partial => "subject_form", :locals => {:parent => @survey, :subject => @survey_subject,:form=>f} %>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:save_and_new), {:controller=>"csi/survey_subjects",:action=>"create",:survey_id=>@survey_subject.survey_id,:save_and_new=>true},{:class=>"btn"} %>
+    <%= link_to t(:cancel), {:controller=>"csi/surveys",:action => "show",:id=>@survey_subject.survey_id},:class =>"btn cancel"%>
+  <% end %>
 
-             </td>
-           </tr>
-         </tbody>
-       </table>
-     </div>
-     <div class="pbBody">
-       <%= error_for @survey_subject%>
-       <!-- base info -->
-       <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-         <span class="pbSubExtra">
-             <span class="requiredLegend">
-               <span class="requiredExampleOuter">
-               <span class="requiredExample">&nbsp;</span>
-               </span>
-             <span class="requiredMark">*</span>
-             <span class="requiredText"> = <%=t(:label_is_required)%></span>
-             </span>
-         </span>
-         <h3><%=t(:label_csi_survey_subject_info)%></h3>
-       </div>
-       <div class="pbSubsection">
-          <div id="id_form">
-            <div class="form">
-               <%= render :partial => "subject_form", :locals => {:parent => @survey, :subject => @survey_subject,:form=>f} %>
-            </div>
-          </div>
-       </div>
-     </div>
-     <div class="pbBottomButtons">
-       <table cellpadding="0" cellspacing="0" border="0">
-         <tbody>
-           <tr>
-             <td class="pbTitle"></td>
-             <td id="bottomButtonRow" class="pbButtonb">
-               <div class="button"><%= link_submit t(:save)%></div>
-               <div class="button"><%= link_to t(:save_and_new), {:controller=>"csi/survey_subjects",:action=>"create",:survey_id=>@survey_subject.survey_id,:save_and_new=>true},{:class=>"submit"} %></div>
-               <div class="button"><%= link_to t(:cancel), {:controller=>"csi/surveys",:action => "show",:id=>@survey_subject.survey_id}%></div>
-             </td>
-           </tr>
-         </tbody>
-       </table>
-     </div>
-</div>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_csi_survey_subject_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <%= error_for @survey%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_csi_survey_subject_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
 <% end %>
-</div>
 
 <div id="hidden_form">
   <% ['string', 'text', 'radio', 'check', 'drop'].each do |input| %>
