--- a/app/views/csi/surveys/_new_form.html.erb
+++ b/app/views/csi/surveys/_new_form.html.erb
@@ -1,179 +1,167 @@
 <%= common_title %>
-<% require_javascript(:datepicker) %>
-<% require_css(:datepicker) %>
-<%= form_for(@survey,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-    <%= f.hidden_field :status_code %>
-    <div id="ep" class="edit-block page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_csi_survey_new)%></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= f.submit t(:save)%></div>
-                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <%= error_for @survey%>
-        <!-- base info -->
-        <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-          <span class="pbSubExtra">
-              <span class="requiredLegend">
-                <span class="requiredExampleOuter">
-                <span class="requiredExample">&nbsp;</span>
-                </span>
-              <span class="requiredMark">*</span>
-              <span class="requiredText"> = <%=t(:label_is_required)%></span>
-              </span>
-          </span>
-          <h3><%=t(:label_csi_survey_info)%></h3>
-        </div>
-        <div class="pbSubsection">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_csi_survey_title)%></label></td>
-                  <td class="dataCol" colspan="3"><%=f.text_field :title, :required=>true,:size=>80%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><%=f.check_box :notify_flag, :id=>"notify_flag"%></td>
-                  <td class="dataCol"><label for="notify_flag"><%=(t :label_csi_survey_notify_flag)%></label></td>
+<%= form_for(@survey,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+  <%= f.hidden_field :status_code %>
+  <% content_for :form_block_common  do %>
+    <table class="form-table" xmlns="http://www.w3.org/1999/html">
+      <tbody>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_title)%></label></td>
+            <td class="data-col" colspan="3"><%=f.text_field :title, :required=>true,:size=>80%></td>
+          </tr>
+          <tr>
+            <td class="label-col text-col"><%=f.check_box :notify_flag, :id=>"notify_flag"%></td>
+            <td class="data-col"><label for="notify_flag"><%=(t :label_csi_survey_notify_flag)%></label></td>
+          </tr>
+          <tr>
+            <td class="label-col  text-col"><%=f.check_box :publish_result_flag, :id=>"publish_result_flag"%></td>
+            <td class="data-col"><label for="publish_result_flag"><%=(t :label_csi_survey_publish_result_flag)%></label></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_end_message)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=f.text_area :end_message,:rows=>3,:cols=>80, :class =>"input-xlarge" %></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=f.text_area :description,:rows=>2,:cols=>80,:class=>"input-xlarge"%></td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_block_incident do %>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col text-col"><%=f.check_box :incident_flag, :id=>"incident_flag"%></td>
+            <td class="data-col"><label for="incident_flag"><%=(t :label_csi_survey_incident_flag)%></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr id="timeLimitTr">
+            <td class="label-col"><label><%=(t :label_csi_survey_time_limit)%></label></td>
+            <td class="data-col">
+              <%=f.text_field :time_limit,:size=>18,:required => true,:class =>"span4"%>
+              <p class="help-block"><%= t(:info_csi_survey_due_dates) %></p>
+            </td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_block_access do %>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_password)%></label></td>
+            <td class="data-col"><%= f.text_field :password %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr id="closeDateTr">
+            <td class="label-col"><label for="close_date"><%=(t :label_csi_survey_closed_datetime)%></label></td>
+            <td class="data-col"><%= f.text_field :close_date,:value =>calendar_date(@survey.close_date),:id=>"close_date",:required => true,:class=>"date",:nobutton=>true%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_block_range do %>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col text-col"><%= t(:label_irm_wf_rule_action_type) %></td>
+            <td class="data-col" style="width:82%">
+              <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:range_str,:str_value=>@survey.get_range_str,:size=>7} %>
+            </td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
 
-                </tr>
-                <tr>
-                  <td class="labelCol"><%=f.check_box :publish_result_flag, :id=>"publish_result_flag"%></td>
-                  <td class="dataCol"><label for="publish_result_flag"><%=(t :label_csi_survey_publish_result_flag)%></label></td>
-                  <td class="labelCol"></td>
-                  <td class="dataCol"></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_csi_survey_end_message)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=f.text_area :end_message,:rows=>3,:cols=>80%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_csi_survey_description)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>2,:cols=>80%></td>
-                </tr>
-            </tbody>
-          </table>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_csi_survey_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <%= error_for @survey%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_csi_survey_info)%></h3>
         </div>
-
-        <!-- setting -->
-        <div class="pbSubheader first tertiaryPalette">
-          <span class="pbSubExtra">
-          </span>
-          <h3><%=t(:label_csi_survey_incident_setting)%></h3>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
         </div>
-        <div class="pbSubsection">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol"><%=f.check_box :incident_flag, :id=>"incident_flag"%></td>
-                  <td class="dataCol"><label for="incident_flag"><%=(t :label_csi_survey_incident_flag)%></label></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr id="timeLimitTr">
-                  <td class="labelCol"><label><%=(t :label_csi_survey_time_limit)%></label></td>
-                  <td class="dataCol"><%=f.text_field :time_limit,:size=>18,:required => true, :info => t(:info_csi_survey_due_dates)%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-            </tbody>
-          </table>
+        <!-- 事故单关联设置 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_csi_survey_incident_setting)%></h3>
         </div>
-        <!-- access control -->
-        <div class="pbSubheader first tertiaryPalette">
-          <span class="pbSubExtra">
-          </span>
-          <h3><%=t(:label_csi_survey_access_control)%></h3>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_incident   %>
         </div>
-        <div class="pbSubsection">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_csi_survey_password)%></label></td>
-                  <td class="dataCol"><%= f.text_field :password %></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr id="closeDateTr">
-                  <td class="labelCol"><label for="close_date"><%=(t :label_csi_survey_closed_datetime)%></label></td>
-                  <td class="dataCol"><%= f.text_field :close_date,:value =>calendar_date(@survey.close_date),:id=>"close_date",:required => true,:class=>"date",:nobutton=>true%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-            </tbody>
-          </table>
+        <!-- 访问控制 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_csi_survey_access_control)%></h3>
         </div>
-        <!-- Survey Range -->
-        <div class="pbSubheader first tertiaryPalette">
-          <span class="pbSubExtra">
-          </span>
-          <h3><%=t(:label_csi_survey_range)%></h3>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_access   %>
         </div>
-
-        <div class="pbSubsection">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-
-                <tr>
-                  <td class="labelCol"><%= t(:label_irm_wf_rule_action_type) %></td>
-                  <td class="dataCol" style="width:82%">
-                    <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:range_str,:str_value=>@survey.get_range_str,:size=>7} %>
-                  </td>
-
-                </tr>
-            </tbody>
-          </table>
+        <!-- 调查范围 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_csi_survey_range)%></h3>
         </div>
-      </div>
-      <div class="pbBottomButtons">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"></td>
-              <td id="bottomButtonRow" class="pbButtonb">
-                <div class="button"><%= f.submit t(:save)%></div>
-                <div class="button"><%= link_to t(:cancel), @return_url%></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_range   %>
+        </div>
       </div>
     </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
 <% end %>
+
 
 <script type="text/javascript">
   $(function(){
-
      function checkIncidentFlag(){
           var checkValue = $("#incident_flag").attr("checked");
-          if(checkValue)
-          {
+          if(checkValue){
              $("#closeDateTr").css("display","none");
              $("#timeLimitTr").css("display","");
-          }
-          else
-          {
-
+          }else{
              $("#closeDateTr").css("display","");
              $("#timeLimitTr").css("display","none");
           }
      }
-
      checkIncidentFlag();
      $("#incident_flag").click(checkIncidentFlag);
-
   });
 </script>
