--- a/app/views/csi/surveys/show.html.erb
+++ b/app/views/csi/surveys/show.html.erb
@@ -1,164 +1,177 @@
 <%= common_title(:show_data=>@survey.title) %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_csi_survey_show) %>&nbsp;<%= t(:label_detail_info) %></h2>
+    </td>
+    <td class="page-block-button">
+      <% if @survey.enabled? %>
+         <%= link_to t(:edit), {}, :disabled => true,:class => "btn" %>
+         <%= link_to t(:disable), {:action => "active",:id=>@survey.id,:active=>Irm::Constant::SYS_NO},:class => "btn" %>
+      <% else %>
+         <%=  link_to t(:edit), {:action => "edit", :id => @survey},:class => "btn" %>
+         <% if @survey.has_any_subjects?  %>
+           <%= link_to t(:active), {:action => "active",:id=>@survey.id,:active=>Irm::Constant::SYS_YES},:class => "btn" %>
+         <% else %>
+           <%= link_to t(:active), {}, {:href => "javascript:void(0);",:class => "btn", :onclick => "alert('#{t(:label_csi_survey_cannot_enable_none_subject)}');"} %>
+          <% end %>
+      <% end %>
+      <%= link_to t(:new), {:action => "new"},:class => "btn" %>
+      <%= link_to(t(:label_csi_survey_result_statistics),{:controller=>"csi/survey_results",:action=>"statistics",:id=>@survey.id},{:back=>true,:class=>"btn"})%>
+      <%= link_to t(:back), {:action => "index"},:class => "btn" %>
+    </td>
+  </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_csi_survey_show) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <%= csi_survey_show_button_bar(@survey) %>
-            <div class="button"><%= link_to(t(:label_csi_survey_result_statistics),{:controller=>"csi/survey_results",:action=>"statistics",:id=>@survey.id},{:back=>true})%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_title)%></label></td>
+            <td class="data-col"><%=@survey.title%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_notify_flag)%></label></td>
+            <td class="data-col"><%= check_img(@survey.notify_flag)%></td>
+            <td class="label-col"><label></label></td>
+            <td class="data-col"><div></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_publish_result_flag)%></label></td>
+            <td class="data-col"><%= check_img(@survey.publish_result_flag)%></td>
+            <td class="label-col"><label></label></td>
+            <td class="data-col"><div></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :active)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><div><%= check_img(@survey.status_code)%></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_end_message)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><div><%= @survey.end_message%></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><div><%= @survey.description%></div></td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_title)%></label></td>
-              <td class="dataCol"><%=@survey.title%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_notify_flag)%></label></td>
-              <td class="dataCol"><%= check_img(@survey.notify_flag)%></td>
-              <td class="labelCol"><label></label></td>
-              <td class="dataCol"><div></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_publish_result_flag)%></label></td>
-              <td class="dataCol"><%= check_img(@survey.publish_result_flag)%></td>
-              <td class="labelCol"><label></label></td>
-              <td class="dataCol"><div></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><div><%= check_img(@survey.status_code)%></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_end_message)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><div><%= @survey.end_message%></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_description)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><div><%= @survey.description%></div></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+</div>
 
-    <div class="pbHeader pbSubheader" style="margin-top: 15px;">
-       <table cellpadding="0" cellspacing="0" border="0">
-         <tbody>
-           <tr>
-             <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_csi_survey_subject_list) %></h2></td>
-             <td class="pbButton">
-               <% if check_survey_result_exist?(@survey.id) && !@survey.enabled? %>
-                 <div class="button"><%= link_to t(:add), {:controller=>"csi/survey_subjects",
-                                                         :action=>"new",:survey_id=>@survey.id}%></div>
-               <% else %>
-                 <div class="button"><%= link_to t(:add), {:controller=>"csi/survey_subjects",
-                                                         :action=>"new",:survey_id=>@survey.id}, :disabled => true%></div>
-
-               <% end %>
-             </td>
-           </tr>
-         </tbody>
-       </table>
-    </div>
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_csi_survey_subject_list) %></h2>
+      </td>
+      <td class="page-block-button">
+        <% if check_survey_result_exist?(@survey.id) && !@survey.enabled? %>
+          <%= link_to t(:add), {:controller=>"csi/survey_subjects",:action=>"new",:survey_id=>@survey.id},:class => "btn" %>
+        <% else %>
+          <%= link_to t(:add), {:controller=>"csi/survey_subjects",:action=>"new",:survey_id=>@survey.id}, :disabled => true,:class => "btn"%>
+        <% end %>
+      </td>
+      <td class="page-block-help">
+        <div id="searchBox"></div>
+      </td>
+  </tr></table>
+  <div class="page-block-body">
     <%= render("show_subjects") %>
-
-    <div class="pbSubheader tertiaryPalette">&nbsp;
-      <h3><%=t(:label_csi_survey_incident_setting)%><span class="titleSeparatingColon"></span></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-           <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_incident_flag)%></label></td>
-              <td class="dataCol"><%= check_img(@survey.incident_flag)%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <% if @survey.incident_flag.eql?(Irm::Constant::SYS_YES) %>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_time_limit)%></label></td>
-              <td class="dataCol"><%=@survey.time_limit%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <% end %>
-
-        </tbody>
-      </table>
-    </div>
-    <div class="pbSubheader tertiaryPalette">&nbsp;
-      <h3><%=t(:label_csi_survey_access_control)%><span class="titleSeparatingColon"></span></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-           <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_password)%></label></td>
-              <td class="dataCol"><%= @survey.password %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_close_date)%></label></td>
-              <td class="dataCol"><%= @survey.close_date%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="pbHeader pbSubheader" style="margin-top: 15px;">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_csi_survey_range_list) %></h2></td>
-              <td class="pbButton">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-     </div>
-    <div class="pbBody">
-        <%ranges = duel_meaning(@survey.get_range_str,duel_values)%>
-
-        <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <% if ranges.any? %>
-              <% ranges.each do |r|%>
-              <tr>
-                <td class="labelCol"></td>
-                <td class="dataCol"><%= r%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-                </td>
-              </tr>
-              <% end %>
-            <% else %>
-              <tr>
-                <td class="labelCol"><div style="font-size: 15px;"><%= t(:label_no_data) %></div></td>
-                <td class="dataCol"></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-                </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-
-    </div>
   </div>
 </div>
 
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_csi_survey_incident_setting)%></h2>
+      </td>
+      <td class="page-block-button"></td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
+      <tbody>
+         <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_incident_flag)%></label></td>
+            <td class="data-col"><%= check_img(@survey.incident_flag)%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <% if @survey.incident_flag.eql?(Irm::Constant::SYS_YES) %>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_time_limit)%></label></td>
+            <td class="data-col"><%=@survey.time_limit%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_csi_survey_access_control)%></h2>
+      </td>
+      <td class="page-block-button"></td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
+      <tbody>
+         <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_password)%></label></td>
+            <td class="data-col"><%= @survey.password %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_csi_survey_close_date)%></label></td>
+            <td class="data-col"><%= @survey.close_date%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_csi_survey_range_list) %></h2>
+      </td>
+      <td class="page-block-button"></td>
+  </tr></table>
+  <div class="page-block-body">
+    <%ranges = duel_meaning(@survey.get_range_str,duel_values)%>
+    <table class="show-table">
+      <tbody>
+        <% if ranges.any? %>
+          <% ranges.each do |r|%>
+          <tr>
+            <td class="label-col"></td>
+            <td class="data-col"><%= r%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <% end %>
+        <% else %>
+          <tr>
+            <td class="label-col"><div style="font-size: 15px;"><%= t(:label_no_data) %></div></td>
+            <td class="data-col"></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 <% content_for :sidebar do %>
     <%= render :partial =>"/irm/common/recently_objects" %>
 <% end %>
