变更单查看页面样式的修改： 1、引入xheditor编辑器相关的资源文件； 2、修改变更单回复历史相关的页面样式；

--- a/app/views/chm/change_requests/_edit_form.html.erb
+++ b/app/views/chm/change_requests/_edit_form.html.erb
@@ -1,3 +1,8 @@
+<style type="text/css">
+  .table-xlarge  {
+     width: 980px !important;
+  }
+</style>
 <%= form_for(@change_request,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
     <% content_for :form_block_common   do%>
     <table class="form-table">
@@ -57,7 +62,7 @@
             <td class="label-col"><label for="summary"><%=t(:label_chm_change_request_summary)%></label></td>
             <td class="data-2col" colspan="3">
               <%=f.text_area :summary,:rows=>8,:cols=>100,:value=>@change_request.summary, :required=>true ,:id=>"summary"%>
-              <%= rich_text_area("summary") %>
+              <%= xheditor("summary") %>
             </td>
 
           </tr>
@@ -65,7 +70,7 @@
     </table>
   <% end %>
   <% content_for :form_block_additional   do%>
-    <table class="form-table">
+    <table class="form-table table-xlarge">
       <tbody>
           <tr>
             <td class="label-col"><label for="contact_id"><%=t(:label_chm_change_request_contact)%></label></td>
