--- a/app/views/chm/change_requests/show_plan.html.erb
+++ b/app/views/chm/change_requests/show_plan.html.erb
@@ -1,6 +1,6 @@
 <style type="text/css">
 
-  div.reply div.replyHeader{
+  div.reply div.reply-header{
       background-color: #efefef;
       padding: 3px 0 0 3px;
       height: 28px;
@@ -12,7 +12,7 @@
 
 
 
-  div.reply div.replyHeaderSection{
+  div.reply div.reply-header-section{
     padding: 5px 5px 5px 0px;
     min-height: 40px;
   }
