--- a/app/views/chm/change_incident_relations/_mini_form.html.erb
+++ b/app/views/chm/change_incident_relations/_mini_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag({:controller => "chm/change_incident_relations",:action => "create",:change_request_id=>@change_request.id},:remote=>true) do %>
         <div class="float-right">
-          <div class="button"><%= link_submit(t(:add))%></div>
+          <%= link_submit(t(:add), :class=>"btn") %>
         </div>
         <div  style="float:right;">
           <%= lov_field_tag "incident_request_id", Icm::IncidentRequest %>
