--- a/app/views/chm/change_requests/_journal_form.html.erb
+++ b/app/views/chm/change_requests/_journal_form.html.erb
@@ -1,39 +1,45 @@
-<%= form_for(@change_journal,:url=>{:controller=>"chm/change_journals",:action=>"create",:request_id=>@change_request.id},:builder => LabellingFormBuilder,:html=>{:multipart => true ,:target=>"hiddenFrame"}) do |f| %>
-
-  <%= page_block("reply_Request") do |pb| %>
-      <%= pb.page_block_header({:title=>""}) do%>
-      <% end %>
-
-      <%= pb.page_block_body do %>
-
-        <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-              <tr>
-                <%= f.hidden_field(:change_request_id) %>
-                <%= f.hidden_field(:replied_by) %>
-                <td class="dataCol" colspan="4" width="100%">
-                  <%= f.text_area :message_body ,:id=>"msgEditor", :jrequired => true,:rows=>8%>
-                  <%= rich_text_area("msgEditor",true) %>
-                </td>
-
-              </tr>
-
-              <tr>
-                <td class="dataCol" colspan="4" width="100%">
-                  <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_change_journal_file"} %>
-                </td>
-              </tr>
-          </tbody>
-        </table>
-
-      <% end %>
-
-      <%= pb.page_block_footer do%>
-        <td id="topButtonRow" class="pbButton">
-          <div class="button"><%= link_submit t(:submit)%></div>
-        </td>
-        <td class="pbHelp">
-        </td>
-      <% end %>
+<%= form_for(@change_journal,:url=>{:controller=>"chm/change_journals",:action=>"create",:request_id=>@change_request.id},:builder => CustomFormBuilder,:html=>{:multipart => true ,:target=>"hiddenFrame"}) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <%= f.hidden_field(:change_request_id) %>
+          <%= f.hidden_field(:replied_by) %>
+          <td class="data-col" colspan="4" width="100%">
+            <%= f.text_area :message_body ,:id=>"msgEditor", :jrequired => true,:rows=>8%>
+            <%= xheditor("msgEditor") %>
+          </td>
+        </tr>
+        <tr>
+          <td class="data-col" colspan="4" width="100%">
+            <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_change_journal_file"} %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   <% end %>
-<% end%>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
+<% end %>
