--- a/app/views/chm/change_requests/_list_journals.html.erb
+++ b/app/views/chm/change_requests/_list_journals.html.erb
@@ -1,27 +1,26 @@
-<%= page_block("journals") do |pb| %>
-    <%= pb.page_block_header({:title=>t(:label_chm_change_request_reply)}) do%>
-      <td id="topButtonRow" class="pbButton">
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_chm_change_request_reply) %></h2>
       </td>
-      <td class="pbHelp">
-      </td>
-    <% end %>
-
-    <%= pb.page_block_body do %>
-      <div id="replies">
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="replies">
         <div class="reply">
-          <div id="journal_<%= @change_request.id %>" class="replyHeader"  submit_by="<%= @change_request.submitted_by %>">
+          <div id="journal_<%= @change_request.id %>" class="reply-header"  submit_by="<%= @change_request.submitted_by %>">
 
               <div style="float:left"><img width="25" height="25" alt="" src="<%=person_avatar(@change_request.submitted_by)%>"></div>
-              <div style="float:left; padding:5px 0 0 5px;">
+              <div style="float:left; padding:0 0 0 5px;">
                 <h3><%= @change_request[:submitted_by_name]  %></h3>
                    <span style="color:#666666;font-style:italic;">
                      <%= t(:label_reply_title,:time_distance=>distance_of_time_in_words(Time.now, @change_request[:created_at]),:date_format=>format_date(@change_request[:created_at])) %>
                    </span>
               </div>
           </div>
-          <div class="replyHeaderSection">
+          <div class="reply-header-section">
             <div class="message">
-
               <%= raw change_message_body(@change_request.summary,0)  %>
             </div>
             <%= change_files(0) %>
@@ -31,6 +30,6 @@
         <% @change_journals.each do |journal| %>
            <%= render :partial=>"journal",:locals=>{:journal=>journal} %>
         <% end %>
-      </div>
-    <% end %>
-<% end %>
+    </div>
+  </div>
+</div>
