--- a/app/views/chm/change_requests/_show_tmp.html.erb
+++ b/app/views/chm/change_requests/_show_tmp.html.erb
@@ -2,101 +2,105 @@
   .hidden {
       display:none;
   }
+  .show-table .data-col {
+      width: auto !important;
+  }
+  .tab-content .page-block {
+      border:none;
+  }
 </style>
-<%= page("showRequest") do |p| %>
-    <%= p.page_header(:title_options=>{:action_meaning=>"(#{@change_request[:change_status_name]})[#{@change_request[:request_number]}]#{@change_request[:title]}"}) %>
+<%= common_title({:action_meaning=>"(#{@change_request[:change_status_name]})[#{@change_request[:request_number]}]#{@change_request[:title]}"}) %>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_chm_change_request)%></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit"},:class=>"btn btn-primary"%>
+      <%= link_to t(:cancel), {:action => "index"},:class=>"btn cancel"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div class="sub-page-block">
+      <div class="sub-page-block-header">
+        <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        <div style="margin-left: 15px; display:inline;">(<a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" expandedText="<%= t(:label_icm_incident_more_info) %>"><%= t(:label_icm_incident_more_info) %></a>)</div>
+      </div>
+      <div class="sub-page-block-body" id="incidentDetail">
+        <table class="show-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_external_system)%></label></td>
+                <td class="data-col"><div><%= @change_request[:external_system_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_category)%></label></td>
+                <td class="data-col"><div><%= @change_request[:category_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_sub_category)%></label></td>
+                <td class="data-col"><div><%= @change_request[:sub_category_name] %></div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_icm_incident_request_organization)%></label></td>
+                <td class="data-col"><div><%= @change_request[:organization_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_requested_by)%></label></td>
+                <td class="data-col"><div><%= @change_request[:requested_by_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_requested_by_role)%></label></td>
+                <td class="data-col"><div><%= @change_request[:requested_role_name] %></div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_contact)%></label></td>
+                <td class="data-col"><div><%= @change_request[:contact_name] %>(<%= @change_request[:contact_number] %>)</div></td>
+                <td class="label-col"><label ><%=t(:label_icm_incident_request_submitted_by)%></label></td>
+                <td class="data-col"><div><%= @change_request[:submitted_by_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_icm_incident_request_submitted_date)%></label></td>
+                <td class="data-col"><div><%= format_date(@change_request[:submitted_date]) %></div></td>
+              </tr>
 
-    <%= p.page_body do %>
-        <%= page_block("show_Request") do |pb| %>
-            <%= pb.page_block_header({:title=>t(:label_chm_change_request)}) do%>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:edit), {:action => "edit"}%></div>
-                <div class="button"><%= link_back t(:back),{:action=>"index"}%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            <% end %>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_change_priority)%></label></td>
+                <td class="data-col"><div><%= @change_request[:change_priority_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_change_urgency)%></label></td>
+                <td class="data-col"><div><%= @change_request[:change_urgency_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_change_impact)%></label></td>
+                <td class="data-col"><div><%= @change_request[:change_impact_name] %></div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_change_status)%></label></td>
+                <td class="data-col"><div><%= @change_request[:change_status_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_support_group)%></label></td>
+                <td class="data-col"><div><%= @change_request[:support_group_name] %></div></td>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_support_person)%></label></td>
+                <td class="data-col"><div><%= @change_request[:support_person_name] %></div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_chm_change_request_request_type)%></label></td>
+                <td class="data-col"><div><%= @change_request[:request_type_name] %></div></td>
+                <td class="label-col"></td>
+                <td class="data-col"><div></div></td>
+                <td class="label-col"></td>
+                <td class="data-col"><div></div></td>
+              </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
-            <%= pb.page_block_body do %>
-
-                <%= sub_page_block("baseInfo") do |spb|%>
-                    <%= spb.sub_page_block_header(:title=>t(:label_common_info)) do %>
-                        <div style="margin-left: 15px; display:inline;">(<a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" expandedText="<%= t(:label_icm_incident_more_info) %>"><%= t(:label_icm_incident_more_info) %></a>)</div>
-                    <% end %>
-
-                    <div id="incidentDetail">
-
-                    <%= spb.sub_page_block_body do %>
-                        <table class="detailList infoList" cellpadding="0" cellspacing="0" border="0">
-                          <tbody>
-                              <tr>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_external_system)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:external_system_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_category)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:category_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_sub_category)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:sub_category_name] %></div></td>
-                              </tr>
-                              <tr>
-                                <td class="label3Col"><label ><%=t(:label_icm_incident_request_organization)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:organization_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_requested_by)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:requested_by_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_requested_by_role)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:requested_role_name] %></div></td>
-                              </tr>
-                              <tr>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_contact)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:contact_name] %>(<%= @change_request[:contact_number] %>)</div></td>
-                                <td class="label3Col"><label ><%=t(:label_icm_incident_request_submitted_by)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:submitted_by_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_icm_incident_request_submitted_date)%></label></td>
-                                <td class="data3Col"><div><%= format_date(@change_request[:submitted_date]) %></div></td>
-                              </tr>
-
-                              <tr>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_change_priority)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:change_priority_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_change_urgency)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:change_urgency_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_change_impact)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:change_impact_name] %></div></td>
-                              </tr>
-                              <tr>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_change_status)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:change_status_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_support_group)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:support_group_name] %></div></td>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_support_person)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:support_person_name] %></div></td>
-                              </tr>
-                              <tr>
-                                <td class="label3Col"><label ><%=t(:label_chm_change_request_request_type)%></label></td>
-                                <td class="data3Col"><div><%= @change_request[:request_type_name] %></div></td>
-                                <td class="label3Col"></td>
-                                <td class="data3Col"><div></div></td>
-                                <td class="label3Col"></td>
-                                <td class="data3Col"><div></div></td>
-                              </tr>
-                          </tbody>
-                        </table>
-                    <% end %>
-                <% end %>
-                </div>
-
-
-
-           <%= tabs("nav",[{:label=>t(:label_chm_change_request_tab_common),:url=>{:controller=>"chm/change_requests",:action=>"show"},:params=>{:id=>@change_request.id}},
-                           {:label=>t(:label_chm_change_request_tab_incident),:url=>{:controller=>"chm/change_requests",:action=>"show_incident"},:params=>{:id=>@change_request.id}},
-                           {:label=>t(:label_chm_change_request_tab_plan),:url=>{:controller=>"chm/change_requests",:action=>"show_plan"},:params=>{:id=>@change_request.id}},
-                           {:label=>t(:label_chm_change_request_tab_implement),:url=>{:controller=>"chm/change_requests",:action=>"show_implement"},:params=>{:id=>@change_request.id}},
-                           {:label=>t(:label_chm_change_request_tab_approve),:url=>{:controller=>"chm/change_requests",:action=>"show_approve"},:params=>{:id=>@change_request.id}}])  %>
+    <div class="sub-page-block">
+      <div class="tabbable">
+        <%= tabs("nav",[{:label=>t(:label_chm_change_request_tab_common),:url=>{:controller=>"chm/change_requests",:action=>"show"},:params=>{:id=>@change_request.id}},
+                       {:label=>t(:label_chm_change_request_tab_incident),:url=>{:controller=>"chm/change_requests",:action=>"show_incident"},:params=>{:id=>@change_request.id}},
+                       {:label=>t(:label_chm_change_request_tab_plan),:url=>{:controller=>"chm/change_requests",:action=>"show_plan"},:params=>{:id=>@change_request.id}},
+                       {:label=>t(:label_chm_change_request_tab_implement),:url=>{:controller=>"chm/change_requests",:action=>"show_implement"},:params=>{:id=>@change_request.id}},
+                       {:label=>t(:label_chm_change_request_tab_approve),:url=>{:controller=>"chm/change_requests",:action=>"show_approve"},:params=>{:id=>@change_request.id}}])  %>
+        <div class="tab-content">
+          <div class="tab-pane active">
            <%= render(:partial=>partial) %>
+          </div>
+        </div>
+      </div>
+    </div>
 
-           <% end %>
-        <% end %>
-    <% end %>
-<% end %>
+  </div>
+</div>
 
 <script type="text/javascript">
     $(".toggle-button").each(function(index,element){
