--- a/app/views/chm/change_requests/_show_plan.html.erb
+++ b/app/views/chm/change_requests/_show_plan.html.erb
@@ -1,19 +1,19 @@
 <% unless limit_device? %>
-<%       require_javascript(:extjs)%>
-<%       require_css(:extjs) %>
-<%     end %>
-<%= page_block("journals") do |pb| %>
-    <%= pb.page_block_header({:title=>t(:label_chm_change_plan)}) do%>
-      <td id="topButtonRow" class="pbButton">
-      </td>
-      <td class="pbHelp">
-      </td>
-    <% end %>
-
-    <%= pb.page_block_body do %>
-      <iframe name="hiddenFrame" style="display: none;"></iframe>
-      <div id="plans">
-        <%= render "list_plans" %>
-      </div>
-    <% end %>
+<% require_jscss(:xheditor) %>
 <% end %>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_chm_change_plan) %></h2>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <iframe name="hiddenFrame" style="display: none;"></iframe>
+    <div id="plans">
+      <%= render "list_plans" %>
+    </div>
+  </div>
+</div>
