--- a/app/views/chm/change_requests/_tasks.html.erb
+++ b/app/views/chm/change_requests/_tasks.html.erb
@@ -1,7 +1,6 @@
-<% require_css([:autosaving]) %>
 <%= detail_data_table(datas.length) do %>
   <!--  irm datatable      -->
-  <div class="irm-datatable">
+  <div class="datatable">
     <div>
         <table>
           <thead>
