--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1720,9 +1720,13 @@ table.filter-table .filter-value-cell {
     text-align: left;
 }
 
+//=====auto saving =====================
+@import "framework/auto-saving";
+
 //=====setting page =====================
 @import "framework/setting";
 @import "plugins/mask";
 @import "framework/datepicker";
+
 
 
