--- a/app/views/chm/change_requests/_plan.html.erb
+++ b/app/views/chm/change_requests/_plan.html.erb
@@ -1,10 +1,12 @@
 <% if !change_plan.new_record? %>
   <div class="reply">
     <div id="planType_<%= change_plan_type.id %>" class="reply-header">
-        <div style="float:left; padding:5px 0 0 5px;"><h3><%=change_plan_type[:name]%></h3></div>
-        <div style="float:left"><div class="button"><%= link_to(t(:edit),{:controller=>"chm/change_plans",:action=>"change",:change_request_id=>change_plan.change_request_id,:change_plan_type_id=>change_plan.change_plan_type_id},:remote=>true)%></div></div>
+        <div style="float:left; padding:0 0 0 5px;"><h3><%=change_plan_type[:name]%></h3></div>
+        <div style="float:left; padding-left: 5px;">
+          <%= link_to(t(:edit),{:controller=>"chm/change_plans",:action=>"change",:change_request_id=>change_plan.change_request_id,:change_plan_type_id=>change_plan.change_plan_type_id},:remote=>true,:class=>"btn")%>
+        </div>
 
-        <div style="float:right; padding:5px 0 0 5px;">
+        <div style="float:right; padding:0 0 0 5px;">
           <h3><%= change_plan[:planed_by_name]  %></h3>
              <span style="color:#666666;font-style:italic;">
                <%= t(:label_reply_title,:time_distance=>distance_of_time_in_words(Time.now, change_plan[:created_at]),:date_format=>format_date(change_plan[:created_at])) %>
@@ -15,18 +17,18 @@
     </div>
     <div class="reply-header-section">
       <div class="message">
-
         <%= raw change_plan_body(change_plan)  %>
       </div>
       <%= change_plan_file(change_plan) %>
     </div>
-
   </div>
 <% else %>
   <div class="reply">
     <div id="planType_<%= change_plan_type.id %>" class="reply-header">
-        <div style="float:left; padding:5px 0 0 5px;"><h3><%=change_plan_type[:name]%></h3></div>
-        <div style="float:left"><div class="button"><%= link_to(t(:new),{:controller=>"chm/change_plans",:action=>"change",:change_request_id=>change_plan.change_request_id,:change_plan_type_id=>change_plan.change_plan_type_id},:remote=>true)%></div></div>
+        <div style="float:left; padding:0 0 0 5px;"><h3><%=change_plan_type[:name]%></h3></div>
+        <div style="float:left;padding-left: 5px;">
+          <%= link_to(t(:new),{:controller=>"chm/change_plans",:action=>"change",:change_request_id=>change_plan.change_request_id,:change_plan_type_id=>change_plan.change_plan_type_id},:remote=>true,:class=>"btn")%>
+        </div>
     </div>
     <div class="reply-header-section">
       <div class="message">
