--- a/app/views/chm/change_requests/_plan_form.html.erb
+++ b/app/views/chm/change_requests/_plan_form.html.erb
@@ -1,46 +1,37 @@
-<div class="reply">
+<div class="reply page-block-body">
   <div id="planType_<%= change_plan_type.id %>" class="reply-header">
       <div style="float:left"><h3><%=change_plan_type[:name]%></h3></div>
   </div>
   <div class="reply-header-section">
     <% options = change_plan.new_record? ? {:action=>"create"}:{:id=>change_plan.id,:action=>"update"} %>
-    <%= form_for(change_plan,:url=>{:controller=>"chm/change_plans"}.merge(options),:builder => LabellingFormBuilder,:html=>{:multipart => true ,:target=>"hiddenFrame"}) do |f| %>
-
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+    <%= form_for(change_plan,:url=>{:controller=>"chm/change_plans"}.merge(options),:builder => CustomFormBuilder,:html=>{:multipart => true ,:target=>"hiddenFrame"}) do |f| %>
+      <table class="form-table" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
               <%= f.hidden_field(:change_plan_type_id) %>
               <%= f.hidden_field(:change_request_id) %>
               <%= f.hidden_field(:planed_by) %>
-              <td class="dataCol" colspan="4" width="100%">
-                <%= f.text_area :plan_body ,:id=>"msgEditor", :jrequired => true,:rows=>8%>
-                <%= rich_text_area("msgEditor",true) %>
+              <td class="data-col" colspan="4" width="100%">
+                <%= f.text_area :plan_body ,:id=>"msgEditor", :required => true,:rows=>8%>
+                <%= xheditor("msgEditor") %>
               </td>
-
             </tr>
-
             <tr>
-              <td class="dataCol" colspan="4" width="100%">
+              <td class="data-col" colspan="4" width="100%">
                 <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"plan_file_#{change_plan.change_plan_type_id}"} %>
               </td>
             </tr>
         </tbody>
       </table>
-      <table style="width:100%" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-          <tr>
-            <td class="pbTitle"></td>
-            <td id="topButtonRow" class="pbButton">
-              <div class="button"><%= link_submit t(:submit)%></div>
-              <div class="button"><%= link_to t(:cancel),{:controller=>"chm/change_plans",:action=>"refresh",:change_request_id=>change_plan.change_request_id,:change_plan_type_id=>change_plan.change_plan_type_id},:remote=>true%></div>
-            </td>
-            <td class="pbHelp">
-            </td>
-          </tr>
-        </tbody>
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title"></td>
+          <td class="page-block-button">
+            <%= link_submit t(:submit),:class=>"btn btn-primary"%>
+            <%= link_to t(:cancel),{:controller=>"chm/change_plans",:action=>"refresh",:change_request_id=>change_plan.change_request_id,:change_plan_type_id=>change_plan.change_plan_type_id},:remote=>true,:class => "btn"%>
+          </td>
+        </tr>
       </table>
-
     <% end%>
   </div>
-
 </div>
