--- a/app/views/chm/change_tasks/_edit_form.html.erb
+++ b/app/views/chm/change_tasks/_edit_form.html.erb
@@ -1,137 +1,159 @@
-<% require_javascript(:datepicker) %>
-<% require_css(:datepicker) %>
-<%= form_for(@change_task,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-    <%= page_block("newImpact") do |pb|%>
-        <%= pb.page_block_header(:title=>t(:label_chm_change_task_edit)) do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
+<style type="text/css">
+  .table-xlarge {
+      width: 980px !important;
+  }
+</style>
+<%= form_for(@change_task,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+    <% content_for :form_block_common   do%>
+    <table class="form-table table-xlarge">
+      <tbody>
+        <tr>
+          <td class="label-col"><label for="name"><%=t(:name)%></label></td>
+          <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="description"><%=t(:description)%></label></td>
+          <td class="data-col" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description",:class=>"input-xlarge"%></td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="support_group_id"><%=t(:label_chm_change_task_support_group)%></label></td>
+          <td class="data-col">
+            <%=f.blank_select :support_group_id,available_support_group,{},{:id=>"support_group_id"}%>
           </td>
-          <td class="pbHelp">
+          <td class="label-col"><label for="support_person_id"><%=t(:label_chm_change_task_support_person)%></label></td>
+          <td class="data-col"><%= f.blank_select(:support_person_id,[],{},
+                              {
+                               :id=>"support_person_id",
+                               :origin_value=>@change_task.support_person_id,
+                               :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${support_group_id}"),
+                               :depend=>"support_group_id",
+                               :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
+                               }) %></td>
+
+        </tr>
+        <tr>
+            <td class="label-col"><label for="plan_start_date"><%=t(:label_chm_change_task_plan_start_date)%></label></td>
+            <td class="data-col">
+              <%=f.date_field :plan_start_date,:value =>calendar_date(@change_task.plan_start_date),:size=>17,:id=>"plan_start_date",:class=>"date"%>
+            </td>
+          <td class="label-col"><label for="plan_end_date"><%=t(:label_chm_change_task_plan_end_date)%></label></td>
+          <td class="data-col">
+            <%=f.date_field :plan_end_date,:value =>calendar_date(@change_task.plan_end_date),:size=>17,:id=>"plan_end_date",:class=>"date",:nobutton=>true%>
           </td>
-
-        <% end %>
-       <%= pb.page_block_body do %>
-            <%= error_for @change_task%>
-            <%= sub_page_block("baseInfo") do |spb|%>
-                <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
-                <%= spb.sub_page_block_body do %>
-                    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                      <tbody>
-                        <tr>
-                          <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                          <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description"%></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="support_group_id"><%=t(:label_chm_change_task_support_group)%></label></td>
-                          <td class="dataCol">
-                            <%=f.blank_select :support_group_id,available_support_group,{},{:id=>"support_group_id"}%>
-                          </td>
-                          <td class="labelCol"><label for="support_person_id"><%=t(:label_chm_change_task_support_person)%></label></td>
-                          <td class="dataCol"><%= f.blank_select(:support_person_id,[],{},
-                                              {
-                                               :id=>"support_person_id",
-                                               :origin_value=>@change_task.support_person_id,
-                                               :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${support_group_id}"),
-                                               :depend=>"support_group_id",
-                                               :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                               }) %></td>
-
-                        </tr>
-                        <tr>
-                            <td class="labelCol"><label for="plan_start_date"><%=t(:label_chm_change_task_plan_start_date)%></label></td>
-                            <td class="dataCol">
-                              <%=f.text_field :plan_start_date,:value =>calendar_date(@change_task.plan_start_date),:size=>17,:id=>"plan_start_date",:class=>"date"%>
-                            </td>
-                          <td class="labelCol"><label for="plan_end_date"><%=t(:label_chm_change_task_plan_end_date)%></label></td>
-                          <td class="dataCol">
-                            <%=f.text_field :plan_end_date,:value =>calendar_date(@change_task.plan_end_date),:size=>17,:id=>"plan_end_date",:class=>"date",:nobutton=>true%>
-                          </td>
-                        </tr>
-                        <tr>
-                            <td class="labelCol"><label for="plan_start_date"><%=t(:label_chm_change_task_start_date)%></label></td>
-                            <td class="dataCol">
-                              <%=f.text_field :start_date,:value =>calendar_date(@change_task.start_date),:size=>17,:id=>"plan_start_date",:class=>"date"%>
-                            </td>
-                          <td class="labelCol"><label for="plan_end_date"><%=t(:label_chm_change_task_end_date)%></label></td>
-                          <td class="dataCol">
-                            <%=f.text_field :end_date,:value =>calendar_date(@change_task.end_date),:size=>17,:id=>"plan_end_date",:class=>"date",:nobutton=>true%>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol empty"><label for="status_code"><%=(t :label_chm_change_task_change_task_phase)%></label></td>
-                          <td class="dataCol"><%=f.blank_select :change_task_phase_id, options_for(Chm::ChangeTaskPhase),{},{:required=>true}%></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol empty"><label for="status_code"><%=(t :label_chm_change_task_status)%></label></td>
-                          <td class="dataCol"><%=f.select :status, options_for(Chm::ChangeStatus),{},{:required=>true}%></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="description"><%=t(:label_chm_change_task_message)%></label></td>
-                          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :message, :cols=>60,:rows=>3,:id=>"description"%></td>
-                        </tr>
-                      </tbody>
-                    </table>
+        </tr>
+        <tr>
+            <td class="label-col"><label for="plan_start_date"><%=t(:label_chm_change_task_start_date)%></label></td>
+            <td class="data-col">
+              <%=f.date_field :start_date,:value =>calendar_date(@change_task.start_date),:size=>17,:id=>"start_date",:class=>"date"%>
+            </td>
+          <td class="label-col"><label for="plan_end_date"><%=t(:label_chm_change_task_end_date)%></label></td>
+          <td class="data-col">
+            <%=f.date_field :end_date,:value =>calendar_date(@change_task.end_date),:size=>17,:id=>"end_date",:class=>"date",:nobutton=>true%>
+          </td>
+        </tr>
+        <tr>
+          <td class="label-col empty"><label for="status_code"><%=(t :label_chm_change_task_change_task_phase)%></label></td>
+          <td class="data-col"><%=f.blank_select :change_task_phase_id, options_for(Chm::ChangeTaskPhase),{},{:required=>true}%></td>
+          <td class="label-col"></td>
+          <td class="data-col"></td>
+        </tr>
+        <tr>
+          <td class="label-col empty"><label for="status_code"><%=(t :label_chm_change_task_status)%></label></td>
+          <td class="data-col"><%=f.select :status, options_for(Chm::ChangeStatus),{},{:required=>true}%></td>
+          <td class="label-col"></td>
+          <td class="data-col"></td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="description"><%=t(:label_chm_change_task_message)%></label></td>
+          <td class="data-col" colspan="3" width="82%"><%=f.text_area :message, :cols=>60,:rows=>3,:id=>"description",:class=>"input-xlarge"%></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+    
+  <% content_for :form_block_depends do %>
+    <% datas = except_self_change_tasks(@change_task.source_id,@change_task.id);depend_task_ids = @change_task.depend_task_ids %>
+    <% datas[0].each do |phase|%>
+      <table class="form-table">
+        <tbody>
+          <tr>
+            <td style="font-weight:bold;font-size:13px;padding:15px 0 0 15px"><%= phase[:name] %></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+        </tbody>
+        <tbody>
+            <% tasks = datas[1][phase.id] %>
+            <% (0..tasks.length-1).step(2) do |index| %>
+              <tr>
+                <td class="label-col"><label><%= tasks[index].name %></label></td>
+                <td class="data-col"><%= check_box_tag 'depend_tasks[]', tasks[index].id, depend_task_ids.include?(tasks[index].id) %></td>
+                <% if tasks[index+1] %>
+                  <td class="label-col"><label><%= tasks[index+1].name %></label></td>
+                  <td class="data-col"><%= check_box_tag 'depend_tasks[]', tasks[index+1].id, depend_task_ids.include?(tasks[index].id) %></td>
                 <% end %>
-          <% end %>
-          <%= sub_page_block("depends") do |spb|%>
-                <%= spb.sub_page_block_header(:title=>t(:label_chm_change_task_depends))%>
-                <%= spb.sub_page_block_body do %>
-                  <% datas = except_self_change_tasks(@change_task.source_id,@change_task.id);depend_task_ids = @change_task.depend_task_ids %>
-                  <% datas[0].each do |phase|%>
-                    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                      <tbody>
-                        <tr>
-                          <td style="font-weight:bold;font-size:13px;padding:15px 0 0 15px"><%= phase[:name] %></td>
-                          <td>&nbsp;</td>
-                          <td>&nbsp;</td>
-                          <td>&nbsp;</td>
-                        </tr>
-                      </tbody>
-                      <tbody>
-                          <% tasks = datas[1][phase.id] %>
+              </tr>
+            <% end%>
+        </tbody>
+      </table>
+    <% end %>
+  <% end %>
 
-                          <% (0..tasks.length-1).step(2) do |index| %>
-                            <tr>
-                              <td class="labelCol"><label><%= tasks[index].name %></label></td>
-                              <td class="dataCol"><%= check_box_tag 'depend_tasks[]', tasks[index].id, depend_task_ids.include?(tasks[index].id) %></td>
-                              <% if tasks[index+1] %>
-                                <td class="labelCol"><label><%= tasks[index+1].name %></label></td>
-                                <td class="dataCol"><%= check_box_tag 'depend_tasks[]', tasks[index+1].id, depend_task_ids.include?(tasks[index].id) %></td>
-                              <% end %>
-                            </tr>
-                          <% end%>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class => "btn"}%>
+  <% end %>
 
-                      </tbody>
-                    </table>
-                  <%end%>
-                <% end %>
-          <% end %>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_chm_change_task_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <%= error_for @change_task %>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
         </div>
-        <%= pb.page_block_footer do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        <% end %>
-    <% end %>
-    <% end %>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common  %>
+        </div>
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_chm_change_task_depends)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_depends   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
 <% end %>
+
 <script type="text/javascript">
   $(function(){
      if($("#support_group_id")){
          $("#support_group_id").cascade("#support_person_id");
      }
-
   });
 </script>
