1、变更单页面样式的修改； 2、修复页面bug

--- a/app/views/irm/ldap_auth_headers/_edit_form.html.erb
+++ b/app/views/irm/ldap_auth_headers/_edit_form.html.erb
@@ -68,6 +68,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @ldap_auth_header %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
