--- a/app/views/skm/settings/edit.html.erb
+++ b/app/views/skm/settings/edit.html.erb
@@ -11,7 +11,7 @@
     </table>
   <% end %>
   <% content_for :form_buttons  do %>
-    <%= link_submit t(:save),{:class=>"btn"}%>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
     <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
   <% end %>
 
