--- a/modules/com/app/views/com/config_attributes/_new_form.html.erb
+++ b/modules/com/app/views/com/config_attributes/_new_form.html.erb
@@ -82,6 +82,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @config_attribute %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
