--- a/app/views/irm/ldap_auth_headers/index.html.erb
+++ b/app/views/irm/ldap_auth_headers/index.html.erb
@@ -13,9 +13,8 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div id="ldap_auth_headers">
-      <%= datatable("ldap_auth_headers",{:action=>"get_data",:format=>"json"},[],{:search_box=>"ldap_auth_headersSearchBox",:paginator_box=>"ldap_auth_headersPaginator"})%>
-    </div>
+    <div id="ldap_auth_headers"></div>
+    <%= datatable("ldap_auth_headers",{:action=>"get_data",:format=>"json"},[],{:search_box=>"ldap_auth_headersSearchBox",:paginator_box=>"ldap_auth_headersPaginator"})%>
     <div id="ldap_auth_headersPaginator"></div>
   </div>
 </div>
