--- a/app/views/irm/ldap_sources/_edit_form.html.erb
+++ b/app/views/irm/ldap_sources/_edit_form.html.erb
@@ -41,6 +41,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @ldap_source %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
