--- a/app/views/skm/channels/edit.html.erb
+++ b/app/views/skm/channels/edit.html.erb
@@ -63,6 +63,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @channel %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
