--- a/app/views/skm/channels/index.html.erb
+++ b/app/views/skm/channels/index.html.erb
@@ -13,9 +13,8 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div id="channels_list">
-      <%= datatable("channels_list",{:action=>"get_data",:format=>"json"},[],{:search_box => "channelsSearchBox",:paginator_box=>"channelsPaginatorBox"})%>
-    </div>
+    <div id="channels_list"></div>
+    <%= datatable("channels_list",{:action=>"get_data",:format=>"json"},[],{:search_box => "channelsSearchBox",:paginator_box=>"channelsPaginatorBox"})%>
     <div id="channelsPaginatorBox"></div>
   </div>
 </div>
