--- a/app/views/skm/entry_statuses/_data_grid.html.erb
+++ b/app/views/skm/entry_statuses/_data_grid.html.erb
@@ -12,9 +12,8 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div id="entry_statuses_list">
-      <%= datatable("entry_statuses_list",{:action=>"get_data",:format=>"json"},[],{:search_box => "statusesSearchBox",:paginator_box=>"entry_statusesPaginatorBox"})%>
-    </div>
+    <div id="entry_statuses_list"></div>
+    <%= datatable("entry_statuses_list",{:action=>"get_data",:format=>"json"},[],{:search_box => "statusesSearchBox",:paginator_box=>"entry_statusesPaginatorBox"})%>
     <div id="entry_statusesPaginatorBox"></div>
   </div>
 </div>
