--- a/app/views/skm/entry_template_elements/_data_grid.html.erb
+++ b/app/views/skm/entry_template_elements/_data_grid.html.erb
@@ -12,9 +12,8 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div id="entry_elements_list">
-      <%= datatable("entry_elements_list",{:controller => "skm/entry_template_elements", :action=>"get_data", :format=>"json"},[],{:search_box => "elementsSearchBox",:paginator_box=>"elementsPaginatorBox"}) %>
-    </div>
+    <div id="entry_elements_list"></div>
+    <%= datatable("entry_elements_list",{:controller => "skm/entry_template_elements", :action=>"get_data", :format=>"json"},[],{:search_box => "elementsSearchBox",:paginator_box=>"elementsPaginatorBox"}) %>
     <div id="elementsPaginatorBox"></div>
   </div>
 </div>
