--- a/app/views/skm/entry_template_elements/_edit_form.html.erb
+++ b/app/views/skm/entry_template_elements/_edit_form.html.erb
@@ -53,6 +53,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @element %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
