--- a/app/views/skm/entry_templates/_edit_form.html.erb
+++ b/app/views/skm/entry_templates/_edit_form.html.erb
@@ -48,6 +48,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @entry_template %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
