--- a/app/views/slm/service_agreements/_edit_form.html.erb
+++ b/app/views/slm/service_agreements/_edit_form.html.erb
@@ -61,6 +61,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @service_agreement %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
