--- a/app/views/slm/service_catalogs/_edit_form.html.erb
+++ b/app/views/slm/service_catalogs/_edit_form.html.erb
@@ -74,6 +74,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @service_catalog %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
