--- a/app/views/slm/service_categories/_new_form.html.erb
+++ b/app/views/slm/service_categories/_new_form.html.erb
@@ -41,6 +41,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @service_category %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
