--- a/app/views/slm/service_categories/index.html.erb
+++ b/app/views/slm/service_categories/index.html.erb
@@ -13,9 +13,8 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div id="service_categorys">
-      <%= datatable("service_categorys",{:action=>"get_data",:format=>"json"},[],{:search_box=>"service_categorysSearchBox",:paginator_box=>"service_categorysPaginatorBox"})%>
-    </div>
+    <div id="service_categorys"></div>
+    <%= datatable("service_categorys",{:action=>"get_data",:format=>"json"},[],{:search_box=>"service_categorysSearchBox",:paginator_box=>"service_categorysPaginatorBox"})%>
     <div id="service_categorysPaginatorBox"></div>
   </div>
 </div>
