--- a/modules/com/app/views/com/config_classes/_new_form.html.erb
+++ b/modules/com/app/views/com/config_classes/_new_form.html.erb
@@ -56,6 +56,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @config_class %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
