--- a/modules/com/app/views/com/config_relation_types/_new_form.html.erb
+++ b/modules/com/app/views/com/config_relation_types/_new_form.html.erb
@@ -39,6 +39,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @config_relation_type %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
