fixed: 固定事故单回复界面“回复”按钮所在的td width为80PX，防止右侧按钮栏因为过多而自动换行

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -110,7 +110,7 @@
     <tr>
       <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_incident_request) %></h2></td>
 
-      <td id="topButtonRow" class="pbButton">
+      <td id="topButtonRow" class="pbButton" style="width:80px;">
         <% if !@incident_request.close? &&!@incident_request.permanent_close?&& allow_to_function?(:reply_incident_request)&&@incident_request.watcher?(Irm::Person.current.id) %>
             <div class="button"><a href="#reply"><%= t(:label_icm_incident_journal_new) %></a></div>
         <% end %>
