--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -764,6 +764,9 @@ body .nav-tab-bar .nav-tab {
     width: 100%;
     vertical-align: middle;
     border-bottom: 1px solid #FFFFFF;
+    tr,td{
+       border: 0;
+    }
 }
 
 .page-block .page-block-header .page-block-title {
@@ -781,6 +784,9 @@ body .nav-tab-bar .nav-tab {
 .page-block .page-block-header .page-block-button {
     width: auto;
     padding: 5px 12px 5px 12px;
+    .btn-toolbar{
+      margin: 0;
+    }
 }
 
 .page-block .page-block-header .page-block-help {
@@ -1099,7 +1105,6 @@ div.min-block-body{
     margin: 0;
     padding: 4px 10px 4px 5px; /* cell padding */
     overflow: visible; /*to make ths where the title is really long work*/
-    border: 0px solid black;
     line-height: auto;
 }
 
