--- a/app/views/irm/object_attributes/_new_step_1.html.erb
+++ b/app/views/irm/object_attributes/_new_step_1.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@object_attribute,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+<%= form_for(@object_attribute,:url=>{:action=>"new"},:builder => CustomFormBuilder) do |f| %>
 
 
   <% content_for :form_block_a   do%>
