--- a/app/views/irm/wf_approval_processes/_ap_step_approval_actions.html.erb
+++ b/app/views/irm/wf_approval_processes/_ap_step_approval_actions.html.erb
@@ -1,49 +1,42 @@
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle">
-                <%= theme_image_tag("checkbox_16x16.gif") %>
-                <h2 class="mainTitle"><%= t(:label_irm_wf_approval_action_ap_step_approval_actions) %></h2>
-              </td>
-              <td class="pbButton">
-                <% unless @wf_approval_process.enabled? %>
-                    <div class="button"><%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{:action => "add_exists_action",:source_str=>"AP_STEP_APPROVAL,#{@wf_approval_process.id},#{step_id}",:back_url=>url_for({})}) %></div>
-                <% else %>
-                    <div class="button"><%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{}, :disabled => true) %></div>
-                <% end %>
-                <div class="asButton">
-                    <span id="createApStepApprovalAction<%= step_id%>" class="menuButton">
-                      <div  class="menuLabel">
-                        <% unless @wf_approval_process.enabled? %>
-                        <span><a><%= t(:label_irm_wf_approval_add_actions)  %></a></span>
-                        <script type="text/javascript">
-                              $(function(){
-                                  $("#createApStepApprovalAction<%= step_id%>").menubutton();
-                              });
-                        </script>
-                        <% else %>
-                        <span><a disabled=true><%= t(:label_irm_wf_approval_add_actions)  %></a></span>
-                        <% end %>
-                      </div>
-                      <div class="menuContent" >
-                        <div class="menuItem"><%= link_to(t(:label_irm_wf_mail_alert_new),{:controller => "irm/wf_mail_alerts",:action => "new",:source_str=>"AP_STEP_APPROVAL,#{@wf_approval_process.id},#{step_id}",:back_url=>url_for({})}) %></div>
-                        <div class="menuItem"><%= link_to(t(:label_irm_wf_field_update_new),{:controller => "irm/wf_field_updates",:action => "new",:source_str=>"AP_STEP_APPROVAL,#{@wf_approval_process.id},#{step_id}",:back_url=>url_for({})}) %></div>
-                      </div>
-                    </span>
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_wf_approval_action_ap_step_approval_actions) %></h2>
+    </td>
+    <td class="page-block-button">
+      <% unless @wf_approval_process.enabled? %>
+          <div class="btn-toolbar">
+          <div class="btn-group">
+            <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{:action => "add_exists_action",:source_str=>"AP_STEP_APPROVAL,#{@wf_approval_process.id},#{step_id}"},:back=>true,:class=>"btn") %>
+          </div>
+          <div class="btn-group">
+            <button data-toggle="dropdown" class="btn dropdown-toggle"><%= t(:label_irm_wf_approval_add_actions)  %><span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><%= link_to(t(:label_irm_wf_mail_alert_new),{:controller => "irm/wf_mail_alerts",:action => "new",:source_str=>"AP_STEP_APPROVAL,#{@wf_approval_process.id},#{step_id}"},:back=>true) %></li>
+              <li><%= link_to(t(:label_irm_wf_field_update_new),{:controller => "irm/wf_field_updates",:action => "new",:source_str=>"AP_STEP_APPROVAL,#{@wf_approval_process.id},#{step_id}",:back_url=>url_for({})}) %></li>
+            </ul>
+          </div>
+          </div>
+      <% else %>
+          <div class="btn-toolbar">
+          <%= link_to(t(:label_irm_wf_approval_process_add_exists_action),{},:back=>true,:class=>"btn disabled") %>
+          <div class="btn-group">
+            <button data-toggle="dropdown" class="btn dropdown-toggle disabled"><%= t(:label_irm_wf_approval_add_actions)  %><span class="caret"></span></button>
+            <ul class="dropdown-menu">
+            </ul>
+          </div>
+          </div>
+      <% end %>
 
-                </div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <%= render :partial => "show_process_actions",:locals => {:actions=>wf_process_actions("AP_STEP_APPROVAL",@wf_approval_process.id,step_id)} %>
-      </div>
-    </div>
+    </td>
+    <td class="page-block-help">
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= render :partial => "show_process_actions",:locals => {:actions=>wf_process_actions("AP_STEP_APPROVAL",@wf_approval_process.id,step_id)} %>
+  </div>
+
+
 </div>
+
+
