--- a/app/views/irm/wf_approval_processes/_disable_processes.html.erb
+++ b/app/views/irm/wf_approval_processes/_disable_processes.html.erb
@@ -1,49 +1,12 @@
-<% if processes.any? %>
-<div class="datatable">
-  <div class="irm-datatable">
-    <div>
-        <table id='rows' >
-          <thead>
-            <tr>
-              <th style="width:80px;">
-                <div><%= t(:operation) %>
-                </div>
-              </th>
-              <th style="width:30%;">
-                <div><%= t(:label_irm_wf_approval_process_name) %>
-                </div>
-              </th>
-              <th style="width:60%;">
-                <div><%= t(:label_irm_wf_approval_process_description) %>
-                </div>
-              </th>
-            </tr>
-          </thead>
-          <tbody class="yui3-datatable-data">
-          <% processes.each do |process| %>
-          <tr id="<%=process.id%>" class="yui3-datatable-even">
-            <td>
-              <div>
-                <%= link_to(t(:edit),{:action=>"edit",:id=>process.id},:back_url=>url_for({})) %>
-                <%= link_to(t(:active),{:action=>"active",:id=>process.id,:active=>Irm::Constant::SYS_YES,:back_url=>url_for({})}) %>
-                <%= link_to(t(:delete),{:action=>"destroy",:id=>process.id,:back_url=>url_for({})},{:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
-               </div>
-            </td>
-            <td>
-              <div>
-                  <%= link_to(process.name,{:action=>"show",:id=>process.id},:back_url=>url_for({})) %>
-               </div>
-            </td>
-            <td>
-              <div>
-                <%= process.description %>
-              </div>
-            </td>
-          </tr>
-          <% end -%>
-          </tbody>
-        </table>
-    </div>
-  </div>
-</div>
+<%=datatable_view({:count=>processes.count,:datas=>processes}) do |builder|%>
+    <% builder.column(:id,{:title=>t(:operation), :width => "120px"}) do |data|%>
+        <%= link_to(t(:edit),{:action=>"edit",:id=>data.id},:back=>true) %>
+        <%= link_to(t(:active),{:action=>"active",:id=>data.id,:active=>Irm::Constant::SYS_YES},:back=>true) %>
+        <%= link_to(t(:delete),{:action=>"destroy",:id=>data.id,:back_url=>url_for({})},{:back=>true,:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
+    <% end %>
+
+    <% builder.column(:name,{:title=>t(:label_irm_wf_approval_process_name)}) do |data|%>
+        <%= link_to(data.name,{:action=>"show",:id=>data.id},:back=>true) %>
+    <% end %>
+    <% builder.column(:description,{:title=>t(:label_irm_wf_approval_process_description)})%>
 <% end %>
