--- a/app/views/irm/wf_approval_processes/_edit_step_2.html.erb
+++ b/app/views/irm/wf_approval_processes/_edit_step_2.html.erb
@@ -1,56 +1,56 @@
-<%= form_for(@wf_approval_process,:url=>{:action=>"edit"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "2", :m => "5") %>
+<%= form_for(@wf_approval_process,:url=>{:action=>"edit"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <%=f.hidden_field(:evaluate_entry_mode,:value=>"FILTER")%>
+    <% if @rule_filter %>
+      <%= render "rule_filter" %>
+    <% end %>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:last), {:action => "edit",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_submit t(:next),{:class=>"btn"} %>
+        <%= link_back t(:cancel), {},:class=>"btn" %>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:step_n, :n => "2") %><%= t(:label_irm_wf_approval_process_filter) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+
+      </td>
+      <td class="page-block-help">
+        <h2 class="block-title"><%= t(:step_n_total_m, :n => "2", :m => "5") %></h2>
+      </td>
+    </tr></table>
+    <div class="page-block-body">
+      <%= error_for @wf_approval_process%>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"></h3>
         </div>
-        <h2>
-            <%= t(:step_n, :n => "2") %><%= t(:label_irm_wf_approval_process_filter) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_irm_wf_approval_process_filter) %></h3>
-            </div>
-            <div class="pbSubsection">
-              <%=f.hidden_field(:evaluate_entry_mode,:value=>"FILTER")%>
-              <% if @rule_filter %>
-                <%= render "rule_filter" %>
-              <% end %>
-            </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_a   %>
         </div>
       </div>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "edit",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
+
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-</div>
-<%end%>
+
+<% end %>
