--- a/app/views/irm/wf_approval_processes/_new_step_3.html.erb
+++ b/app/views/irm/wf_approval_processes/_new_step_3.html.erb
@@ -1,87 +1,97 @@
-<%= form_for(@wf_approval_process,:url=>{:action=>"new"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "3", :m => "5") %>
+<%= form_for(@wf_approval_process,:url=>{:action=>"new"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table" style="width: 100%">
+      <tbody>
+          <tr>
+            <td class="label-col"><label for="wf_approval_process_next_approver_mode"><%=t(:label_irm_wf_approval_process_next_approver_mode)%></label></td>
+            <td class="data-col"><%=f.blank_select :next_approver_mode,available_next_approver_mode, :required=>true ,:id=>"wf_approval_process_next_approver_mode"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_b   do%>
+    <table class="form-table">
+      <tbody>
+      <% available_wf_process_editability.each_with_index do |ability,index| %>
+        <tr>
+          <td class="label-col">
+            <label>
+              <%=f.radio_button :record_editability, ability[1],{:id=>"editability_#{index}",:class=>"recordEdit"}%>
+            </label>
+          </td>
+          <td class="data-3col" colspan="3">
+            <label for="editability_<%= index %>"> <%= ability[0] %> </label>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_submit t(:next),{:class=>"btn"} %>
+        <%= link_back t(:cancel), {},:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title" style="width: 40%;">
+          <h2 class="block-title"><%= t(:step_n, :n => "3") %><%= t(:label_irm_wf_approval_process_editable_and_next_approver) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+          <h2 class="block-title"><%= t(:step_n_total_m, :n => "3", :m => "5") %></h2>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @wf_approval_process%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_process_next_approver)  %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
         </div>
-        <h2>
-            <%= t(:step_n, :n => "3") %><%= t(:label_irm_wf_approval_process_editable_and_next_approver) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_irm_wf_approval_process_next_approver) %></h3>
-            </div>
-            <div class="pbSubsection">
-              <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                    <tr>
-                      <td class="labelCol"><label for="wf_approval_process_next_approver_mode"><%=t(:label_irm_wf_approval_process_next_approver_mode)%></label></td>
-                      <td class="dataCol"><%=f.blank_select :next_approver_mode,available_next_approver_mode, :required=>true ,:id=>"wf_approval_process_next_approver_mode"%></td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                </tbody>
-              </table>
-            </div>
-            <div id="head_2_ep" class="pbSubheader tertiaryPalette">
-              <h3><%= t(:label_irm_wf_approval_process_record_editability) %></h3>
-            </div>
-            <div class="pbSubsection">
-              <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                  <tr>
-                    <td class="labelCol"><label for="wf_rule_evaluate_criteria_rule"></label></td>
-                    <td class="dataCol" colspan="3" style="width:82%">
-                      <% available_wf_process_editability.each_with_index do |ability,index| %>
-                        <div>
-                          <%=f.radio_button :record_editability, ability[1],{:id=>"editability_#{index}",:class=>"recordEdit"}%>
-                          <label for="editability_<%= index %>"> <%= ability[0] %> </label>
-                        </div>
-                      <% end %>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_process_record_editability)  %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_b  %>
+          </div>
         </div>
       </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title"  style="width: 40%;">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
-<%end%>
+
+<% end %>
+
 <script type="text/javascript">
   $(function(){
       $.checkRadioButton("input.recordEdit");
   });
 </script>
+
+
