--- a/app/views/irm/wf_approval_processes/_new_step_4.html.erb
+++ b/app/views/irm/wf_approval_processes/_new_step_4.html.erb
@@ -1,75 +1,76 @@
-<%= form_for(@wf_approval_process,:url=>{:action=>"new"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "4", :m => "5") %>
-        </div>
-        <h2>
-            <%= t(:step_n, :n => "4") %><%= t(:label_irm_wf_approval_process_edit_layout) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_irm_wf_approval_process_select_show_fields) %></h3>
-            </div>
-            <div class="pbSubsection">
-              <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                  <tr>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-                  <tr>
-                     <td class="labelCol">
-                       <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
-                     </td>
-                     <td class="dataCol" colspan="3">
-                       <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>available_approval_fields(@wf_approval_process.bo_code),:str_value_field=>:approve_fields,:str_value=>@wf_approval_process.approve_fields,:size=>14,:order=>true} %>
-                     </td>
-                  </tr>
+<%= form_for(@wf_approval_process,:url=>{:action=>"new"},:builder => CustomFormBuilder) do |f| %>
 
-                  <tr>
-                    <td class="labelCol"></td>
-                    <td class="dataCol" colspan="3"><%=f.check_box :display_history_flag, :id=>"display_history_flag"%><label for="display_history_flag"><%=t(:label_irm_wf_approval_process_display_history_flag)%></label></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+           <td class="label-col">
+             <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
+           </td>
+           <td class="data-3col" colspan="3">
+             <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>available_approval_fields(@wf_approval_process.bo_code),:str_value_field=>:approve_fields,:str_value=>@wf_approval_process.approve_fields,:size=>14,:order=>true} %>
+           </td>
+        </tr>
+
+        <tr>
+          <td class="label-col"></td>
+          <td class="data-3col text-col" colspan="3"><%=f.check_box :display_history_flag, :id=>"display_history_flag"%><label for="display_history_flag"><%=t(:label_irm_wf_approval_process_display_history_flag)%></label></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_submit t(:next),{:class=>"btn"} %>
+        <%= link_back t(:cancel), {},:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:step_n, :n => "4") %><%= t(:label_irm_wf_approval_process_edit_layout) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+          <h2 class="block-title"><%= t(:step_n_total_m, :n => "4", :m => "5") %></h2>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @wf_approval_process%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_process_next_approver)  %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
         </div>
       </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
-<%end%>
+
+<% end %>
+
