--- a/app/views/irm/wf_approval_processes/_new_step_5.html.erb
+++ b/app/views/irm/wf_approval_processes/_new_step_5.html.erb
@@ -1,92 +1,93 @@
-<style type="text/css">
-  div.submitterType{
-      float:left;
-  }
-</style>
-<%= form_for(@wf_approval_process,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "5", :m => "5") %>
+<%= form_for(@wf_approval_process,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+           <td class="label-col">
+             <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
+           </td>
+           <td class="data-col" colspan="3">
+             <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_approval_process.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:submitter_str,:str_value=>""} %>
+           </td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+    <% content_for :form_block_b   do%>
+     <%= f.hidden_field(:step) %>
+     <table class="form-table">
+       <tbody>
+         <tr>
+           <td class="label-col"><label for="wf_approval_process_allow_submitter_recal"><%=t(:label_irm_wf_approval_process_allow_submitter_recal)%></label></td>
+           <td class="data-col"><label><%=f.check_box :allow_submitter_recall, :id=>"wf_approval_process_allow_submitter_recal"%></label></td>
+           <td class="label-col empty">&nbsp;</td>
+           <td class="data-col empty">&nbsp;</td>
+         </tr>
+       </tbody>
+     </table>
+   <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_submit t(:save),{:class=>"btn"} %>
+        <%= link_back t(:cancel), {},:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:step_n, :n => "5") %><%= t(:label_irm_wf_approval_process_submit) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+          <h2 class="block-title"><%= t(:step_n_total_m, :n => "5", :m => "5") %></h2>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @wf_approval_process%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_process_init_submiter)  %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
         </div>
-        <h2>
-            <%= t(:step_n, :n => "5") %><%= t(:label_irm_wf_approval_process_submit) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_irm_wf_approval_process_init_submiter) %></h3>
-            </div>
-            <div class="pbSubsection">
-              <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                  <tr>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-                  <tr>
-                     <td class="labelCol">
-                       <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
-                     </td>
-                     <td class="dataCol" colspan="3">
-                       <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_approval_process.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:submitter_str,:str_value=>""} %>
-                     </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div id="head_2_ep" class="pbSubheader tertiaryPalette">
-              <h3><%= t(:label_irm_wf_approval_process_submit_config) %></h3>
-            </div>
-            <div class="pbSubsection">
-              <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                  <tr>
-                    <tr>
-                      <td class="labelCol"><label for="wf_approval_process_allow_submitter_recal"><%=t(:label_irm_wf_approval_process_allow_submitter_recal)%></label></td>
-                      <td class="dataCol"><%=f.check_box :allow_submitter_recall, :id=>"wf_approval_process_allow_submitter_recal"%></td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_process_submit_config)  %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_b   %>
+          </div>
         </div>
       </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= f.submit t :save%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
-<%end%>
+
+<% end %>
+
