--- a/app/views/irm/wf_approval_processes/_show_process_actions.html.erb
+++ b/app/views/irm/wf_approval_processes/_show_process_actions.html.erb
@@ -1,52 +1,14 @@
-<% if actions.any? %>
-<div class="datatable">
-  <div class="irm-datatable">
-    <div>
-        <table id='rows' >
-          <thead>
-            <tr>
-              <th style="width:40px;">
-                <div><%= t(:operation) %>
-                </div>
-              </th>
-              <th style="width:40px;">
-                <div><%= t(:label_irm_wf_rule_action_type) %>
-                </div>
-              </th>
-              <th style="width:180px;">
-                <div><%= t(:label_irm_wf_rule_action_description) %>
-                </div>
-              </th>
-            </tr>
-          </thead>
-          <tbody class="yui3-datatable-data">
-          <% actions.each do |action| %>
-          <tr id="<%=action[:action].id%>" class="yui3-datatable-even">
-            <td>
-              <div>
-                <%= link_to(t(:edit),action[:edit_url_options]) %>
-                <% unless @wf_approval_process.enabled? %>
-                    <%= link_to(t(:delete),action[:delete_url_options],{:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
-                <% else %>
-                    <%= t(:delete) %>
-                <% end %>
-               </div>
-            </td>
-            <td>
-              <div>
-                  <%= action[:action_type_name] %>
-               </div>
-            </td>
-            <td>
-              <div>
-                <%= link_to(action[:ref_action].name,action[:show_url_options]) %>
-              </div>
-            </td>
-          </tr>
-          <% end -%>
-          </tbody>
-        </table>
-    </div>
-  </div>
-</div>
+<%=datatable_view({:count=>actions.count,:datas=>actions}) do |builder|%>
+    <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
+        <%= link_to(t(:edit),data[:edit_url_options]) %>
+        <% unless @wf_approval_process.enabled? %>
+            <%= link_to(t(:delete),data[:delete_url_options],{:confirm => t(:label_are_you_sure) ,:method => :delete} )%>
+        <% else %>
+            <%= t(:delete) %>
+        <% end %>
+    <% end %>
+    <% builder.column(:action_type_name,{:title=>t(:label_irm_wf_rule_action_type)})%>
+    <% builder.column(:description,{:title=>t(:label_irm_wf_rule_action_description)}) do |data|%>
+        <%= link_to(data[:ref_action].name,data[:show_url_options]) %>
+    <% end %>
 <% end %>
