--- a/app/views/irm/wf_approval_steps/_edit_step_3.html.erb
+++ b/app/views/irm/wf_approval_steps/_edit_step_3.html.erb
@@ -1,115 +1,115 @@
-<style type="text/css">
-  .floatLeft{
-      float:left;
-      vertical-align:middle;
-  }
-</style>
-<%= form_for(@wf_approval_step,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "3", :m => "3") %>
-        </div>
-        <h2>
-            <%= t(:step_n, :n => "3") %><%= t(:label_irm_wf_approval_step_select_approver) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <h3><%= t(:label_irm_wf_approval_step_select_approver) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
+<%= form_for(@wf_approval_step,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
 
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table">
+      <tbody>
+
+        <tr>
+          <td class="label-col"><label><%=f.radio_button(:approver_mode,"SELECT_BY_SUMBITTER",:id=>"bySubmitter",:class=>"typeButton")%></label></td>
+          <td class="data-3col" colspan="3"><label for="bySubmitter"><%=t(:label_irm_wf_approval_step_approver_mode_by_approver)%></label></td>
+        </tr>
+        <% if @wf_approval_process.next_approver_mode.present? %>
+        <tr>
+          <td class="label-col"><label><%=f.radio_button(:approver_mode,"PROCESS_DEFAULT",:id=>"processDefault",:class=>"typeButton")%></label></td>
+          <td class="data-3col" colspan="3"><label for="processDefault"><%=t(:label_irm_wf_approval_step_approver_mode_process_default)%> (<%=@wf_approval_process[:next_approver_mode_name]%>)  </label></td>
+        </tr>
+        <% end %>
+        <tr>
+          <td class="label-col"><label><%=f.radio_button(:approver_mode,"AUTO_APPROVER",:id=>"autoApprover",:class=>"typeButton")%></label></td>
+          <td class="data-3col" colspan="3">
+            <label for="autoApprover"><%=t(:label_irm_wf_approval_step_approver_mode_auto)%></label>
+          </td>
+        </tr>
+        <tr class="showTR" refValue="AUTO_APPROVER" style="display:none">
+          <td class="label-col"></td>
+          <td class="data-3col" colspan="3" >
+              <%= render :partial => "step_approver",:locals => {:f=>f} %>
+          </td>
+        </tr>
+        <tr>
+          <td class="label-col"><%= f.check_box(:allow_delegation_approve,:id=>"allow_delegation_approve") %></td>
+          <td class="data-col"><label for="allow_delegation_approve"><%=t(:label_irm_wf_approval_step_allow_delegation_approve)%></label></td>
+          <td class="label-col">&nbsp;</td>
+          <td class="data-col">&nbsp;</td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+    <% content_for :form_block_b   do%>
+        <% unless 1.eql?(@wf_approval_step.step_number.to_i) %>
+          <div class="sub-page-block">
+            <div class="sub-page-block-header">
+              <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_process_submit_config)  %></h3>
+            </div>
+            <div class="sub-page-block-body">
+              <table class="form-table">
+                <tbody>
                     <tr>
-                      <td class="labelCol"><%=f.radio_button(:approver_mode,"SELECT_BY_SUMBITTER",:id=>"bySubmitter",:class=>"typeButton")%></td>
-                      <td class="dataCol" colspan="3" width="82%"><label for="bySubmitter"><%=t(:label_irm_wf_approval_step_approver_mode_by_approver)%></label></td>
+                      <td class="label-col"><%=f.radio_button(:reject_behavior,"REJECT_STEP",:id=>"rejectStep",:class=>"rejectBehaviorButton")%></td>
+                      <td class="data-3col" colspan="3" width="82%"><label for="rejectStep"><%=t(:label_irm_wf_approval_step_reject_behavior_step_reject)%></label></td>
                     </tr>
-                    <% if @wf_approval_process.next_approver_mode.present? %>
                     <tr>
-                      <td class="labelCol"><%=f.radio_button(:approver_mode,"PROCESS_DEFAULT",:id=>"bySubmitter",:class=>"typeButton")%></td>
-                      <td class="dataCol" colspan="3" width="82%"><label for="processDefault"><%=t(:label_irm_wf_approval_step_approver_mode_process_default)%> (<%=@wf_approval_process[:next_approver_mode_name]%>)  </label></td>
-                    </tr>
-                    <% end %>
-                    <tr>
-                      <td class="labelCol"><%=f.radio_button(:approver_mode,"AUTO_APPROVER",:id=>"autoApprover",:class=>"typeButton")%></td>
-                      <td class="dataCol" colspan="3" width="82%">
-                        <label for="autoApprover"><%=t(:label_irm_wf_approval_step_approver_mode_auto)%></label>
+                      <td class="label-col"><%=f.radio_button(:reject_behavior,"REJECT_PROCESS",:id=>"rejectProcess",:class=>"rejectBehaviorButton")%></td>
+                      <td class="data-3col" colspan="3" width="82%">
+                        <label for="rejectProcess"><%=t(:label_irm_wf_approval_step_reject_behavior_process_reject)%></label>
                       </td>
                     </tr>
-                    <tr class="showTR" refValue="AUTO_APPROVER" style="display:none">
-                      <td class="labelCol"></td>
-                      <td class="dataCol" colspan="3" width="82%">
-                          <%= render :partial => "step_approver",:locals => {:f=>f} %>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><%= f.check_box(:allow_delegation_approve,:id=>"allow_delegation_approve") %></td>
-                      <td class="dataCol"><label for="allow_delegation_approve"><%=t(:label_irm_wf_approval_step_allow_delegation_approve)%></label></td>
-                      <td class="labelCol">&nbsp;</td>
-                      <td class="dataCol">&nbsp;</td>
-                    </tr>
-                  </tbody>
-                </table>
-
+                </tbody>
+              </table>
             </div>
-            <% unless 1.eql?(@wf_approval_step.step_number.to_i) %>
-                <div id="head_2_ep" class="pbSubheader tertiaryPalette">
-                  <h3><%= t(:label_irm_wf_approval_step_reject_behavior)%></h3>
-                </div>
-                <div class="pbSubsection">
-                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                    <tbody>
-                        <tr>
-                          <td class="labelCol"><%=f.radio_button(:reject_behavior,"REJECT_STEP",:id=>"rejectStep",:class=>"rejectBehaviorButton")%></td>
-                          <td class="dataCol" colspan="3" width="82%"><label for="rejectStep"><%=t(:label_irm_wf_approval_step_reject_behavior_step_reject)%></label></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><%=f.radio_button(:reject_behavior,"REJECT_PROCESS",:id=>"rejectProcess",:class=>"rejectBehaviorButton")%></td>
-                          <td class="dataCol" colspan="3" width="82%">
-                            <label for="rejectProcess"><%=t(:label_irm_wf_approval_step_reject_behavior_process_reject)%></label>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol">&nbsp;</td>
-                          <td class="dataCol">&nbsp;</td>
-                          <td class="labelCol">&nbsp;</td>
-                          <td class="dataCol">&nbsp;</td>
-                        </tr>
-                    </tbody>
-                  </table>
-                </div>
-            <% end %>
+          </div>
+        <% end %>
+   <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:next), {:action => "edit",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_submit t(:save),{:class=>"btn"} %>
+        <%= link_back t(:cancel), {},:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:step_n, :n => "3") %><%= t(:label_irm_wf_approval_step_select_approver) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+          <h2 class="block-title"><%= t(:step_n_total_m, :n => "3", :m => "3") %></h2>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @wf_approval_process%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_step_select_approver)  %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
         </div>
+        <%= content_for :form_block_b   %>
       </div>
-    </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "edit",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= f.submit t :save%></div>
-                    <div class="button"><%= link_to t(:cancel), {:controller => "irm/wf_approval_processes",:action => "show",:id=>params[:process_id]} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
-<%end%>
 
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
+    </div>
+
+<% end %>
 <script type="text/javascript">
     $(function(){
         $("input.typeButton").click(function(e){
@@ -125,5 +125,4 @@
         $.checkRadioButton("input.multipleApproveModeButton");
         $.checkRadioButton("input.rejectBehaviorButton");
     });
-
 </script>
