--- a/app/views/irm/wf_approval_steps/_new_step_2.html.erb
+++ b/app/views/irm/wf_approval_steps/_new_step_2.html.erb
@@ -1,90 +1,85 @@
-<style type="text/css">
-  .floatLeft{
-      float:left;
-  }
-</style>
-<%= form_for(@wf_approval_step,:url=>{:action=>"new"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:step) %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "2", :m => "3") %>
-        </div>
-        <h2>
-            <%= t(:step_n, :n => "2") %><%= t(:label_irm_wf_approval_step_filter_config) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <h3><%= t(:label_irm_wf_approval_step_filter_config) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><%=f.radio_button(:evaluate_mode,"",:id=>"allValue",:class=>"typeButton")%></td>
-                      <td class="dataCol" colspan="3" width="82%"><label for="allValue"><%=t(:label_irm_wf_approval_step_evaluate_mode_all)%></label></td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol"><%=f.radio_button(:evaluate_mode,"FILTER",:id=>"filterValue",:class=>"typeButton")%></td>
-                      <td class="dataCol" colspan="3" width="82%">
-                        <div class="floatLeft">
-                            <label for="filterValue"><%=t(:label_irm_wf_approval_step_evaluate_mode_all_filter)%></label>
-                        </div>
-                        <% if @wf_approval_step.step_number.to_i.eql?(1) %>
-                        <div class="floatLeft">
-                            ,<%=t(:else)%><%= f.select(:evaluate_result,available_wf_step_evaluate_result) %>
-                        </div>
-                        <% else %>
-                            <%= f.hidden_field(:evaluate_result,:value=>"NEXT_STEP") %>
-                        <% end %>
-                      </td>
-                    </tr>
-                    <tr class="showTR" refValue="FILTER" style="display:none">
-                      <td class="labelCol"></td>
-                      <td class="dataCol" colspan="3" width="82%">
-                          <% if @rule_filter %>
-                              <%= render "rule_filter" %>
-                          <% end %>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+<%= form_for(@wf_approval_step,:url=>{:action=>"new"},:builder => CustomFormBuilder) do |f| %>
 
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col"><label><%=f.radio_button(:evaluate_mode,"",:id=>"allValue",:class=>"typeButton")%></label></td>
+          <td class="data-3col" colspan="3"><label for="allValue"><%=t(:label_irm_wf_approval_step_evaluate_mode_all)%></label></td>
+        </tr>
+        <tr>
+          <td class="label-col"><label><%=f.radio_button(:evaluate_mode,"FILTER",:id=>"filterValue",:class=>"typeButton")%></label></td>
+          <td class="data-3col" colspan="3">
+            <div class="form-inline">
+              <label for="filterValue"><%=t(:label_irm_wf_approval_step_evaluate_mode_all_filter)%></label>
+              <% if @wf_approval_step.step_number.to_i.eql?(1) %>
+                  <label>,<%=t(:else)%><%= f.select(:evaluate_result,available_wf_step_evaluate_result) %></label>
+              <% else %>
+                  <label><%= f.hidden_field(:evaluate_result,:value=>"NEXT_STEP") %></label>
+              <% end %>
             </div>
+          </td>
+        </tr>
+        <tr class="showTR" refValue="FILTER" style="display:none">
+          <td class="label-col"></td>
+          <td class="data-3col" colspan="3" width="82%">
+              <% if @rule_filter %>
+                  <%= render "rule_filter" %>
+              <% end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_submit t(:next),{:class=>"btn"} %>
+        <%= link_back t(:cancel), {},:class=>"btn" %>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:step_n, :n => "2") %><%= t(:label_irm_wf_approval_step_filter_config) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+
+      </td>
+      <td class="page-block-help">
+        <h2 class="block-title"><%= t(:step_n_total_m, :n => "2", :m => "3") %></h2>
+      </td>
+    </tr></table>
+    <div class="page-block-body">
+      <%= error_for @wf_approval_process%>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_irm_wf_approval_step_filter_config) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_a   %>
         </div>
       </div>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:controller => "irm/wf_approval_processes",:action => "show",:id=>params[:process_id]} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
+
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-</div>
-<%end%>
+
+<% end %>
+
 <script type="text/javascript">
    $(function(){
       $("input.typeButton").click(function(e){
