--- a/app/views/chm/change_requests/_show_tmp.html.erb
+++ b/app/views/chm/change_requests/_show_tmp.html.erb
@@ -5,8 +5,9 @@
   .show-table .data-col {
       width: auto !important;
   }
+
   .tab-content .page-block {
-      border:none;
+     /* border:none; */
   }
 </style>
 <%= common_title({:action_meaning=>"(#{@change_request[:change_status_name]})[#{@change_request[:request_number]}]#{@change_request[:title]}"}) %>
