--- a/app/views/chm/change_requests/get_data.html.erb
+++ b/app/views/chm/change_requests/get_data.html.erb
@@ -61,8 +61,9 @@
   }
   td.vt {
     vertical-align: top;
-    padding: 4px 6px 4px 7px;
+    padding: 4px 6px 4px 7px !important;
     white-space: normal;
+    display:table-cell;
   }
 </style>
 <script type="text/javascript">
