--- a/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap_and_overrides.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap_and_overrides.css.less
@@ -29,4 +29,19 @@
 .tabbable ul {
     padding-left: 20px;
 }
+.tabbable .nav-tabs {
+    border-bottom: 1px solid #F8F8F8;
+}
+.tabbable .nav {
+    margin-bottom: 0;
+}
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover {
+  color: #555555;
+  background-color: #ffffff;
+  border: 1px solid #1797C0;
+  border-bottom-color: transparent;
+  cursor: default;
+}
+
 
